--- a/index.html
+++ b/index.html
@@ -3,34 +3,67 @@
 
 <head>
   <meta charset="UTF-8">
+  <!--JavaScript for Browser support--!>
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <title>Mini Project 6</title>
-  <link rel="stylesheet" type="text/css" href="sample.css">
+  <title>Showcase Website</title>
+<link rel="stylesheet" type="text/css" href="showcase.css">
 </head>
 
-<body Id="thetop">
-  <!--Navigation Panel, class selector sets initial "current" section of navigation, LIST styling example-->
+
+<body Id="thetop" >
+	<!--Navigation Panel-->
   <nav>
     <ul>
-      <li><a href="#zero">Nav1</a></li>
-      <li><a href="#first">Nav2</a></li>
-      <li><a href="#second">Nav3</a></li>
-      <li style="float:right;"><a href="#third">Nav4</a></li>
+		<li style="background-color:#000000"><a href="#zero">Go To...</a></li>
+		<br/><br/><br/>
+		<li style="border-top:1px solid #434343"><a href="grandma2.html">Mother's Mother</a></li>
+		<li><a href="grandpa2.html">Mother's Father</a></li>
+		<li><a href="grandma1.html">Father's Mother</a></li>
+		<li><a href="grandpa1.html">Father's Father</a></li>
+		<li><a href="mom2.html">Mother</a></li>
+		<li><a href="dad1.html">Father</a></li>
+		<li><a href="me.html">Me</a></li>
     </ul>
   </nav>
-  <br />
-  <br />
   <!--Main Header-->
   <header>
-    <h1 Id="toptitle" style="text-align:center">Website Hosting</h1>
-    <h3 Id="subtitle">Website Hosting is set up by Jacob Nelsen on GitHub, more to come.</h3>
+    <h1 Id="toptitle" style="text-align:center">My Family Tree</h1>
+    <h3 Id="subtitle">Showcase Website By Jacob Nelsen</h3>
   </header>
+    <br />
 
-
+<section>
+	<div class = "tree">
+	
+  <img src = "tree-701968_960_720.png", alt = "Family Tree">
+		<a href = "grandpa1.html" ><div class = "picframe" id = "grandpa1">
+		<div class="desc">Lloyd</div>
+		</div></a>
+		<a href = "grandma1.html" ><div class = "picframe" id = "grandma1">
+		<div class="desc">Mary</div>
+		</div></a>
+		<a href = "grandpa2.html" ><div class = "picframe" id = "grandpa2">
+		<div class="desc">Don</div>
+		</div></a>
+		<a href = "grandma2.html" ><div class = "picframe" id = "grandma2">
+		<div class="desc">Bonnie</div>
+		</div></a>
+		<a href = "dad1.html" ><div class = "picframe" id = "dad1" >
+		<div class="desc">Scott</div>
+		</div></a>
+		<a href = "mom2.html" ><div class = "picframe" id = "mom2">
+		<div class="desc">Liz</div>
+		</div></a>
+		<a href = "me.html" ><div class = "picframe" id = "me">
+		<div class="desc">Jacob</div>
+		</div></a>
+	</div>
+</section>
+  <br />
   <footer>
-    <p><b>Website Hosting Footer - Jacob Nelsen </b></p>
+    <p><b>Showcase Website - Jacob Nelsen </b></p>
   </footer>
 </body>
 
